--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ts-node": "^8.9.0",
     "tslint": "^6.1.2",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "axios": ">=0.21.1"
   }
 }
